Revert "fixed bug where resizing window with an open collapsed header would cause sizing problems on uncollapsed header links"
the header-height-min class was causing issues for the flex layout on Edge, when the whole page body was treated as a flex element. the original issue only arises when the header has exactly one link; I don't think this is a realistic problem, and not worth the headache (right now) of having to rewrite the header element for Edge
This reverts commit ea3e18e933d2a5654bb0151c84fc82cb75b8f8b1.

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -5,7 +5,6 @@
 @media screen and (max-width: map-get($bp, header)) {
     [data-menu-links] {
         height: auto;
-        min-height: 0;
         max-height: 0;
 
         & > * {
